# slambook

./: .gitignore  README.md
ch10/ceres_custombundle/: SnavelyReprojectionError.h  ceresBundle.cpp
ch10/ceres_custombundle/common/: projection.h
ch10/g2o_custombundle/: g2o_bal_class.h  g2o_bundle.cpp
ch10/g2o_custombundle/common/: projection.h
ch11/: pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp  pose_graph_gtsam.cpp
ch12/: feature_training.cpp  loop_closure.cpp
ch13/dense_RGBD/: CMakeLists.txt  octomap_mapping.cpp  pointcloud_mapping.cpp
ch13/dense_monocular/: dense_mapping.cpp
ch3/useEigen/: eigenMatrix.cpp
ch3/useGeometry/: eigenGeometry.cpp
ch4/useSophus/: useSophus.cpp
ch5/imageBasics/: imageBasics.cpp
ch5/joinMap/: joinMap.cpp
ch6/ceres_curve_fitting/: CMakeLists.txt  curve_fitting.cpp  main.cpp
ch6/ceres_tutorials/: CMakeLists.txt  curve_fitting.cc  main.cpp  powell.cc
ch6/g2o_curve_fitting/: main.cpp
ch7/: CMakeLists.txt  feature_extraction.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp  virtual-billboard.cpp
ch8/LKFlow/: useLK.cpp
ch8/directMethod/: CMakeLists.txt  direct_semidense.cpp  direct_sparse.cpp
project/0.4/config/: default.yaml
project/0.4/include/myslam/: camera.h  config.h  frame.h  g2o_types.h  map.h  mappoint.h  visual_odometry.h
project/0.4/src/: camera.cpp  config.cpp  frame.cpp  g2o_types.cpp  map.cpp  mappoint.cpp  visual_odometry.cpp
project/0.4/test/: run_vo.cpp
